--- a/www/css/style.css
+++ b/www/css/style.css
@@ -88,3 +88,8 @@ input[type="reset"]{
       right: 40px;
       cursor: pointer;
   }
+
+  #imgavatar{
+      width: 50px;
+      height: 50px;
+  }
